syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "ProductServiceProto";

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 available_stock = 4;
}
